# multi-ai-agent-llmops

./: .dockerignore  .env.sample  Dockerfile  Jenkinsfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: main.py
app/backend/: api.py
app/config/: settings.py
app/core/: ai_agent.py
app/frontend/: ui.py
custom_jenkins/: Dockerfile
