[project]
name = "multi-ai-agent-llmops"
version = "0.0.1"
description = ""
authors = [
    {name = "amaithi-sam",email = "amaithichirasan.s@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "langchain-groq (>=1.1.1,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "streamlit (>=1.52.2,<2.0.0)",
    "langgraph (>=1.0.5,<2.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
